# ocaml-gnuplot

./: .gitignore  .merlin  API.odocl  AUTHORS.txt  CHANGES.txt  INSTALL.txt  Makefile  README.md  _oasis  _tags  dune-project  gnuplot.opam  index.html  index.md  myocamlbuild.ml  setup.ml
.github/workflows/: gh-pages.yml  main.yml
0.6/: index.html
0.6/gnuplot/: index.html
0.6/gnuplot/Gnuplot/: index.html
0.6/gnuplot/Gnuplot/Color/: index.html
0.6/gnuplot/Gnuplot/Filling/: index.html
0.6/gnuplot/Gnuplot/Labels/: index.html
0.6/gnuplot/Gnuplot/Output/: index.html
0.6/gnuplot/Gnuplot/Range/: index.html
0.7/: index.html
0.7/gnuplot/: index.html
0.7/gnuplot/Gnuplot/: index.html
0.7/gnuplot/Gnuplot/Color/: index.html
0.7/gnuplot/Gnuplot/Filling/: index.html
0.7/gnuplot/Gnuplot/Labels/: index.html
0.7/gnuplot/Gnuplot/Output/: index.html
0.7/gnuplot/Gnuplot/Range/: index.html
0.7/gnuplot/Gnuplot/Series/: index.html
dev/: index.html
dev/gnuplot/Gnuplot/Output/: index.html
dev/gnuplot/Gnuplot/Series/: index.html
examples/: candlesticks.ml  dune  ex1.ml  ex2.ml  ex3.ml  ex4.ml  gaussian_noise.ml  gaussian_noise_3d.ml  gbm_paths.ml  gnuplot_test.ml  jbuild  list_utils.ml  list_utils.mli  save_plot.ml  simple_plot.ml  supply_demand.ml
gnuplot/: index.html
gnuplot/Gnuplot/: index.html
gnuplot/Gnuplot/Color/: index.html
gnuplot/Gnuplot/Filling/: index.html
gnuplot/Gnuplot/Labels/: index.html
gnuplot/Gnuplot/Output/: index.html
gnuplot/Gnuplot/Range/: index.html
gnuplot/Gnuplot/Series/: index.html
gnuplot/Gnuplot/Splots/: index.html
lib/: META  gnuplot.ml  gnuplot.mldylib  gnuplot.mli  jbuild
src/: dune  gnuplot.ml  gnuplot.mli
