opam-version: "1.2"
maintainer: "Oliver Gu <gu.oliver@yahoo.com>"
authors: [ "Oliver Gu <gu.oliver@yahoo.com>" ]
homepage: "https://bitbucket.org/ogu/gnuplot-ocaml"
bug-reports: "https://bitbucket.org/ogu/gnuplot-ocaml/issues"
dev-repo: "https://bitbucket.org/ogu/gnuplot-ocaml.git"
license: "LGPL-2.1+ with OCaml linking exception"
version: "0.5.3"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "base"
  "stdio"
  "calendar"
  "conf-gnuplot"
  "dune" {build & >= "1.0"}
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Simple interface to Gnuplot

Gnuplot-OCaml provides a simple interface to Gnuplot from OCaml.
The API supports only 2D graphs and was inspired by FnuPlot.
"
