opam-version: "2.0"
maintainer: "Oliver Gu <gu.oliver@yahoo.com>"
authors: [ "Oliver Gu <gu.oliver@yahoo.com>" ]
homepage: "https://bitbucket.org/ogu/gnuplot-ocaml"
bug-reports: "https://bitbucket.org/ogu/gnuplot-ocaml/issues"
dev-repo: "git+https://bitbucket.org/ogu/gnuplot-ocaml.git"
license: "LGPL-2.1+ with OCaml linking exception"
version: "0.5.3"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "base-unix"
  "ISO8601"
  "conf-gnuplot"
  "dune" {>= "1.0"}
  "ocaml" {>= "4.03"}
]
synopsis: "Simple interface to Gnuplot

Gnuplot-OCaml provides a simple interface to Gnuplot from OCaml.
The API supports only 2D graphs and was inspired by FnuPlot
"
